# dyxi_qt_prod

./: .gitmodules  CMakeLists.txt  Main.qml  assets.qrc  dyxi_app.qmlproject  main.cpp
components/: CustomButton.qml  CustomTextField.qml  PageContainer.qml  Style.qml
pages/: EditProfilePage.qml  LoginPage.qml  SelectGamePage.qml  SettingsPage.qml  StartGamePage.qml  ViewProfilePage.qml  ViewScorePage.qml  WelcomeBackPage.qml
src/coreLib/Dataset/: recognitionshapeexplorerdataset.cpp  recognitionshapeexplorerdataset.h  tracinglevel1dataset.cpp
src/coreLib/General/: CMakeLists.txt  CoreSettings.hpp  audiomanipulator.cpp  audiomanipulator.h  inputeventfilter.cpp  inputeventfilter.h  modelmanager.cpp  modelmanager.h  neworkaccessmanager.cpp  postact.cpp  postact.h  postactivity.cpp  postactivity.h  speechrecognizer.cpp  speechrecognizer.h  whisperloader.cpp  whisperloader.h
src/coreLib/General/audio/: circularaudiobuffer.cpp  circularaudiobuffer.h
src/coreLib/General/sherpa/: audiocapture.cpp  audiocapture.h  modelextractor.cpp  modelextractor.h  recognitionworker.cpp  recognitionworker.h  sherparecognizer.cpp  sherparecognizer.h  speechmanager.cpp  speechmanager.h
src/coreLib/Sherpa/: CMakeLists.txt
src/coreLib/WhisperApp/: CMakeLists.txt  whisperworker.cpp  whisperworker.h
src/modules/QtCredentialsClient/: CMakeLists.txt  INTEGRATION_DOCS.md  Login.qml  LoginMain.qml  WelcomePage.qml  authservice.cpp  authservice.h  envconfig.cpp  envconfig.h
src/modules/QtOAuthClient/: CMakeLists.android.txt  CMakeLists.ios.txt  CMakeLists.txt  INTEGRATION_DOCS.md  INTEGRATION_STEPS.md  Info.plist  Login.qml  LoginMain.qml  WelcomePage.qml  authservice.cpp  authservice.h  main.cpp  resources.qrc
